--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=AccountService
-spring.data.mongodb.uri=mongodb+srv://kennymach:collegeatu@cluster0.l4y2o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://kennymach:collegeatu@cluster0.l4y2o.mongodb.net/accounttypedb?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=accounttypedb
