--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=AccountService
+server.port=8081
 spring.data.mongodb.uri=mongodb+srv://kennmax77:Collegelife24@cluster0.jcspc.mongodb.net/accounttypedb?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=accounttypedb
