Added setup for RabbitMQ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=AccountService
 server.port=8081
 spring.data.mongodb.uri=mongodb+srv://kennmax77:Collegelife24@cluster0.jcspc.mongodb.net/accounttypedb?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=accounttypedb
+
+#Setup for RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
