--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,21 @@ jobs:
 
       - name: Package with maven
         run: mvn clean package
+
+      #Part Two
+      #Step to build Docker image
+      - name: Build Docker Image
+        run: docker build -t product_pipe_image .
+
+      #Step to log in to Docker Hubb
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
+
+      # Step to push Docker image to Docker Hub
+      - name: Push Docker Image
+        run: |
+          docker tag product_pipe_image ${{secrets.DOCKER_USERNAME}}/product_pipe_image:latest \
+          && docker push ${{secrets.DOCKER_USERNAME}}/product_pipe_image:latest
