--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,19 +10,26 @@ on:
 
 jobs:
   build:
+    #The type of machine that the job will run on
     runs-on: ubuntu-latest
     steps:
       - name: Get code from repo
         uses: actions/checkout@v4
 
+      #Step to set up jdk 17
       - name: Get Jdk
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      #Step to build the project using maven
       - name: Package with maven
         run: mvn clean package
+
+      #Step to run unit tests using Maven
+      - name: Run Unit Tests
+        run: mvn test
 
       #Part Two
       #Step to build Docker image
